# gpt-sovits-rust

./: .gitignore  Cargo.toml  README.md  build_docker_images.sh
assets/: PHRASES_DICT.json  PINYIN_DICT.json  ref_wav.json  rep_map.json  tokenizer.json  vocab.json  zh_dict.json
docker/: dockerfile  dockerfile.nobuild
docker/deploy/: docker-compose.yml
docker/deploy/logs/: tts_server.log.2025-01-18
docker/deploy/refs/: ref_wav.json
sovits-rs/: Cargo.toml
sovits-rs/src/: audio_utils.rs  bert_utils.rs  lib.rs  text_utils.rs
sovits-rs/src/text/: chinese.rs  english.rs  symbols.rs  tone_sandhi.rs
sovits-rs/src/text/lazy_pinyin/: convert.rs  mmseg.rs  mod.rs  pinyin.rs  style.rs
sovits-rs/src/text/zh_normalization/: chronology.rs  mod.rs  num.rs  phonecode.rs  quantifier.rs  text_normalization.rs
src/: audio_utils.rs  bert_utils.rs  main.rs  text_utils.rs
src/text/: chinese.rs  english.rs  tone_sandhi.rs
src/text/lazy_pinyin/: convert.rs  mmseg.rs  pinyin.rs  style.rs
src/text/zh_normalization/: chronology.rs  num.rs  phonecode.rs  quantifier.rs  text_normalization.rs
tts_server/: Cargo.toml
tts_server/src/: error.rs  main.rs
tts_server/src/base/: configuration.rs  record.rs  trace.rs
tts_server/src/tts/: server.rs
tts_server/src/tts/api/: tts_handler.rs
tts_server/src/tts/engine/: tts_engine.rs
