[package]
name = "sovits"
version = "0.1.0"
edition = "2021"

[dependencies]
tokenizers = { version = "0.21.0" }
grapheme_to_phoneme = { version = "0.1.0" }
english-numbers = "0.3.3"
jieba-rs = "0.7.1"

lingua = { version = "1.6.2", default-features = false, features = [
    "english",
    "chinese",
    "japanese",
] }
regex = { version = "1.10.3" }
fancy-regex = "0.14.0"

fnv = "1.0.x"
substring = "1.4.5"
pinyin = { version = "0.10", features = ["compat", "default"] }
zip = "2.2.2"
log = "0.4.20"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0.135"
lazy_static = "*"

anyhow = "1.0.57"
ndarray = "0.16.1"
ort = { version = "2.0.0-rc.9" }

dasp = { version = "0.11", features = ["all"] }
hound = "3"
rubato = "0.16.1"
num-traits = "0.2.18"
num = "0.4.1"
chrono = "0.4"

[features]
# default = ["ort/cuda", "cuda"]
# cuda = []

[profile.dev]
opt-level = 0
rpath = true

[profile.release]
opt-level = 3
panic = "abort"
codegen-units = 1
lto = true
strip = true
debug = false
rpath = true
